fix group selector overflow in analytics closes #750

--- a/client/assets/custom.scss
+++ b/client/assets/custom.scss
@@ -88,6 +88,7 @@ body {
 
 .ui.dropdown .menu {
   max-height: 11em !important;
+  overflow: auto;
 }
 
 .ui.attached.tabular.menu {
